2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.18 ===

2006-04-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-rc-style.c (theme_parse_image): Use g_new0 rather than
	g_malloc to make sure fields are initialized.
	* src/sapwood-pixmap.c (sapwood_pixmap_get_for_file): Initialize the
	buffer to silence valgrind.
	N#27967

2006-04-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_focus): Use state parameter when matching
	images for focus to allow more flexible, state-dependent focus
	theming. N#23070

2006-04-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.17 ===
	
	* src/sapwood-pixmap.c(sapwood_pixmap_free): Do not unref NULL mask.
	N#27515

2006-04-12  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.14.1 ===

	* src/*.c: #include <config.h> to get configure settings correctly...
	Duh! N#26389

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.14 ===

	* configure.in
	* NEWS: Updated

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* Makefile.am (MAINTAINERCLEANFILES): Add compile and depcomp.
	* src/Makefile.am (sapwood_server_CFLAGS): Add dummy cflags to work
	with newer autotools.

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): Use clip mask
	only if one was drawn using the tile masks from theme.
	* src/sapwood-server.c (extract_pixmap_single): Create masks only for
	pixbufs with alpha.

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image, get_window_for_shape): Use
	flag from gtkrc to figure out need for shape mask.
	* src/sapwood-rc-style.c (theme_symbols, theme_parse_shaped,
	theme_parse_image): Add 'shaped' (default=FALSE) token to explicitly
	enable support for shaped windows from gtkrc.
	* src/theme-pixbuf.h (ThemeImage): Trade one bit from 'refcount' to